@startuml TP5_Herencia_y_Polimorfismo

skinparam classAttributeIconSize 0
skinparam abstractClassFontStyle italic
skinparam class {
    BackgroundColor White
    BorderColor Black
}

class Punto {
  - _x : float
  - _y : float
  + getX() : float
  + setX(x: float)
  + getY() : float
  + setY(y: float)
  + __str__() : String
}

abstract class ElementoGrafico {
  # _colorHex : String
  # _posicionCentro : Punto
  # _nombreCapa : String
  + getColorHex() : String
  + setColorHex(colorHex: String)
  + getPosicionCentro() : Punto
  + setPosicionCentro(p: Punto)
  + getNombreCapa() : String
  + setNombreCapa(nombre: String)
  + moverA(nuevoDestino: Punto)
  + {abstract} calcularArea() : float
  + {abstract} calcularPerimetro() : float
  + __str__() : String
}

class Rectangulo {
  - _ladoMenor : float
  - _ladoMayor : float
  + getLadoMenor() : float
  + setLadoMenor(lado: float)
  + getLadoMayor() : float
  + setLadoMayor(lado: float)
  + calcularArea() : float
  + calcularPerimetro() : float
  + escalar(factor: float)
  + __str__() : String
}

class Elipse {
  - _radioMayor : float
  - _radioMenor : float
  + getRadioMayor() : float
  + setRadioMayor(r: float)
  + getRadioMenor() : float
  + setRadioMenor(r: float)
  + calcularArea() : float
  + calcularPerimetro() : float
  + escalar(factor: float)
  + __str__() : String
}

class Cuadrado {
  + setLadoMenor(lado: float)
  + setLadoMayor(lado: float)
  + __str__() : String
}

class Circulo {
  + setRadioMayor(radio: float)
  + setRadioMenor(radio: float)
  + __str__() : String
}

class Linea {
  - _longitud : float
  + calcularArea() : float
  + calcularPerimetro() : float
}

class Triangulo {
  - _ladoA : float
  - _ladoB : float
  - _ladoC : float
  + calcularArea() : float
  + calcularPerimetro() : float
}

class Pentagono {
  - _lado : float
  + calcularArea() : float
  + calcularPerimetro() : float
}

class Lienzo {
  - _elementos : List<ElementoGrafico>
  + agregar(elemento: ElementoGrafico)
  + getElementos() : List<ElementoGrafico>
  + __len__() : int
}

' Relaciones
ElementoGrafico "1" --> "1" Punto : posicionCentro

ElementoGrafico <|-- Rectangulo
ElementoGrafico <|-- Elipse
ElementoGrafico <|-- Linea
ElementoGrafico <|-- Triangulo
ElementoGrafico <|-- Pentagono

Rectangulo <|-- Cuadrado
Elipse     <|-- Circulo

Lienzo "1" o-- "0..*" ElementoGrafico : contiene

note bottom of Cuadrado
  Viola el LSP al sobreescribir
  los setters para forzar
  lados iguales.
end note

note bottom of Circulo
  Misma lógica que Cuadrado:
  radioMayor == radioMenor
  siempre.
end note

@enduml
